fix: apply fix to the postion and visibility of calendar elements

--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     font-size: 25px;
-    color: #084b8f;
+    color: #0892cf;
     /* text-shadow: 1px 3px 3px midnightblue; */
   }
   .title{
